<resources>
    <string name="app_name">Animal_habitat_monitoring_mobile</string>
    <string name="titleOnboard">Контроль животных</string>
    <string name="aboutOnboard">Что ты знаешь о популяции\n диких животных у тебя в\n городе?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picTiger">picTiger</string>
    <string name="startButton">Начать</string>
    <string name="mainTitle">Главная страница</string>
    <string name="createTitle">Создание формы</string>
    <string name="nameAnimals">Выберете название животного</string>
    <string-array name="spinnerAnimals">
        <item>Выбрать значение</item>
        <item>Утка</item>
        <item>Рогатая сова</item>
        <item>Пёстрый дятел</item>
        <item>Ёж</item>
        <item>Ласка</item>
    </string-array>
    <string name="createForm">Отправить</string>
    <string name="cameraPermissionDenied">Не удается запустить камеру без разрешения</string>
    <string name="GPSPermissionDenied">Не удается запустить GPS без разрешения</string>
    <string name="settingsTitle">Настройки приложения</string>
    <string name="IPText">IP адрес сервера</string>
    <string name="IPhint">Адрес</string>
    <string name="regTitle">Приветствую</string>
    <string name="RegPassword">Пароль</string>
    <string name="RegUsername">Логин</string>
    <string name="RegFIO">ФИО</string>
    <string name="RegButton">Регистрация</string>
    <string name="regAuth">Авторизоваться</string>
    <string name="logButton">Войти</string>
    <string name="logText">Хотите зарегистрироваться?</string>
    <string name="logReg">Регистрация</string>
    <string name="logTitle">Добро пожаловать</string>
    <string name="profile">Личный аккаунт</string>
    <string name="welcome">Привет</string>
    <string name="WelcomeUser">Гость</string>
    <string name="infoProfile">Вход</string>
    <string name="infoProfile3">Выход</string>
    <string name="infoTitle">Справочник животных</string>
    <string name="textCount">Созданных фото:</string>
    <string name="photoText">Нажмите на рамку для создания фотографии</string>

</resources>